DEMO OSM/OCP4-istio/servicemesh/servicemesh-config/recommendation/virtualservice-mirror.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recommendation
spec:
  hosts:
  - recommendation
  http:
  - route:
    - destination:
        host: recommendation
        subset: version-v1
      weight: 100
  ### To send mirror traffic to another version
    mirror:
      host: recommendation
      subset: version-v2
