DEMO OSM/OCP4-istio/servicemesh/servicemesh-config/recommendation/virtualservice-safari.yaml
##### Safari users to v2, use with curl -A Safari #####
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recommendation
spec:
  hosts:
  - recommendation
  http:
  - match:
    - headers:
        baggage-user-agent:
          regex: .*Safari.*
    route:
    - destination:
        host: recommendation
        subset: version-v2
  - route:
    - destination:
        host: recommendation
        subset: version-v1
