DEMO OSM/OCP4-istio/servicemesh/servicemesh-config/recommendation/virtualservice-weights.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recommendation
spec:
  hosts:
  - recommendation
  http:
  - route:
    - destination:
        host: recommendation
        subset: version-v1
      weight: 75
  ## To divide traffic between different versions
    - destination:
        host: recommendation
        subset: version-v2
      weight: 25
    # retries:
    #   attempts: 3
    #   perTryTimeout: 2s
#---
### VirtualService that introduces Fault-injection and Delay
# apiVersion: networking.istio.io/v1alpha3
# kind: VirtualService
# metadata:
#   name: recommendation
# spec:
#   hosts:
#   - recommendation
#   http:
#   - fault:
#     ### Introduces 7s delay in 50% of calls, call with "while true; do time curl http://<route>; sleep .5; done"
#       # delay:
#       #   fixedDelay: 7.000s
#       #   percent: 50
#     ###
#     ### Makes 50% of calls return a 503
#       abort:
#         httpStatus: 503
#         percent: 50
#     ###
#     route:
#     - destination:
#         host: recommendation
#         subset: app-recommendation
###
---
### VirtualService for trying retries and timeout, use the following commands to misbehave
### oc exec -it $(oc get pods|grep recommendation-v2|awk '{ print $1 }'|head -1) -c recommendation /bin/bash 
### curl localhost:8080/misbehave

# apiVersion: networking.istio.io/v1alpha3
# kind: VirtualService
# metadata:
#   name: recommendation
# spec:
#   hosts:
#   - recommendation
  
#   http:
#   - route:
#     - destination:
#         host: recommendation
#         subset: version-v2
#   ### For terminating connection after 1s  
#     timeout: 1.000s
  ###
  ### For retrying after 3s timeout, up until 3 times
    # retries:
    #   attempts: 3
    #   perTryTimeout: 2s
  ###
##
---
